# ThreadPool

./: .clang-format  CMakeLists.txt  ParallelAccumulate.h  README.md  ThreadPool.h  main.cpp  parallelaccumulate.cpp  tests.cpp
